<resources>
    <!-- internal resources: not translated -->
    <string name="fa_plus_square" translatable="false">{fa-plus-square}</string>
    <string name="fa_trash" translatable="false">{fa-trash}</string>
    <string name="fa_filter" translatable="false">{fa-filter}</string>
    <string name="fa_pencil" translatable="false">{fa-pencil}</string>
    <string name="fa_plus" translatable="false">{fa-plus}</string>
    <string name="fa_arrows_v" translatable="false">{fa-arrows-v}</string>
    <!-- end internal resources -->
    <string name="app_name">Watchface Scheduler</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="watchface_name">Name</string>
    <string name="watchface_uuid">App UUID</string>
    <string name="auto_rotate">Auto Rotate</string>
    <string name="enabled">Enabled</string>
    <string name="sort">Sort</string>
    <string name="import_help_header">Importing Watchfaces:</string>
    <string name="import_help_text">1. Open up the Pebble app and click on support from the menu\n\n2. Click \"Contact Support\", select "other" as the category and click OK, leaving the description blank. The support email will then be generated.\n\n3. Select \"Import Pebble App UUIDs\" from the list when prompted\n\nOR\n\nSend the support email to yourself and open the \"pebble.log.gz\" attachment with this application.</string>
    <string name="import_intent_label">Import Pebble App UUIDs</string>
    <string name="random">Random</string>
    <string name="watchfaces">Watchfaces</string>
    <string name="schedule">Schedule</string>
    <string name="add_a_watchface">Add Watchface</string>
    <string name="enter_watchface_name">Please enter a name for the watchface</string>
    <string name="enter_valid_uuid">Please enter a valid UUID</string>
    <string name="watchface_selected">Watchface selected</string>
    <string name="uuid_copied">Copied UUID to clipboard</string>
    <string name="add_watchfaces_first">Add some watchfaces first</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="no_watchfaces_selected_error">You don\'t have any watchfaces enabled for randomisation, check their checkbox in the list to enable</string>
    <string name="select_watchfaces_first">Select some watchfaces first</string>
    <string name="edit_schedule">Edit schedule</string>
    <string name="import_email_error">Could not find pebble.log.gz in the support email, try opening the attached file directly.</string>
    <string name="wrong_import_file_error">Wrong file, please open pebble.log.gz to import app info</string>
    <string name="import_complete">Import Complete</string>
    <string name="view_import_message">Would you like to see a list of all watchfaces &amp; apps?</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="locker_applications">Locker Applications</string>
    <string name="delete_watchface">Delete this Watchface?</string>
    <string name="edit_watchface">Edit Watchface</string>
    <string name="delete_schedule">Delete This Schedule?</string>
    <string name="import_read_file_failed">Failed to read import file</string>
    <string name="all_days">All Days</string>
    <string name="weekends">Weekends</string>
    <string name="weekdays" >Weekdays</string>
    <string name="quiet_time">Quiet Time</string>
    <string name="Settings">Settings</string>
    <string name="turn_off_auto_rotate">Auto Rotate: Off</string>
    <string name="turn_on_auto_rotate">Auto Rotate: On</string>
    <string name="quiet_time_notice">Quiet time only applies to auto rotation.</string>
    <string-array name="time_units">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string-array name="day_units">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>