<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp" >

    <LinearLayout
        android:id="@+id/auto_prefs"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:gravity="center|start">
        <IconTextView
            android:id="@+id/drag_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sort"
            android:text="@string/fa_arrows_v"
            android:shadowColor="#22000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="32sp"
            android:textColor="#ff8c8c8c" />
        <CheckBox
            android:id="@+id/auto_watchface_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_prefs"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:gravity="center|end">

        <IconTextView
            android:id="@+id/watchface_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit"
            android:text="@string/fa_pencil"
            android:shadowColor="#22000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="32sp"
            android:textColor="#42BAD8" />

        <IconTextView
            android:id="@+id/watchface_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:text="@string/fa_trash"
            android:shadowColor="#22000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="32sp"
            android:textColor="#ff8c8c8c" />
    </LinearLayout>

    <TextView
        android:id="@+id/watchface_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/auto_prefs"
        android:layout_toEndOf="@id/auto_prefs"
        android:layout_toLeftOf="@id/edit_prefs"
        android:layout_toStartOf="@id/edit_prefs"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:textSize="19sp" />
</RelativeLayout>