<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:baselineAligned="false"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/schedule_watchface_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/schedule_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center|end">

        <IconTextView
            android:id="@+id/schedule_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit"
            android:text="@string/fa_pencil"
            android:shadowColor="#22000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="32sp"
            android:textColor="#42BAD8" />

        <IconTextView
            android:id="@+id/schedule_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:text="@string/fa_trash"
            android:shadowColor="#22000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="32sp"
            android:textColor="#ff8c8c8c" />
    </LinearLayout>
</LinearLayout>